--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      <h2 class="esutante-titulo">Minha apresentação</h2>
      <div class="estudante-div"> 
 
-         <img src="img/foto.jpg" alt="foto de perfil do miguel" class="estudante-imagen">
+         <img src="img/macaco.jpg" alt="foto de perfil do miguel" class="estudante-imagen">
        
          <h1> Olá mundo! </h1>
             <h3 class="estudante-nome"> Miguel Edurado de Almeida </h3>
