--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
     <section id="MinhaHabilidades">
         
-    <p>Dsenher</p>
+    <p>Desenhar</p>
     <p>jogar</p>
     <p>igles basico</p>
     </section>
 
     <section id=meusprojetos>
-    <p>ser rico</p>
+    <p>ficar rico</p>
     <p>terminas os estudos</p>
     <p>aprender a programar</p>
 
