--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <section id="estudante">
             <h2 class="estudante-titulo">Minha Apresentação</h2>
             <div class="estudante-div" >
-                <img src="img/macaco foto teste.jpg" alt="Foto de perfil do Miguel Eduardo de Alemida " class="estudante-imagem">
-                <h3 class="estudante-nome" > Sou o Prof. Miguel Cesar Grobe de Miranda </h3>
+                <img src="img/minha foto.jpg" alt="Foto de perfil do Miguel Eduardo de Alemida " class="estudante-imagem">
+                <h3 class="estudante-nome" > Sou Miguel Eduardo de Alemida </h3>
                 <h1> Estou aprendendo programação </h1>
                 <p>Sou estutandante do Ensino Médio.</p>
                 <p> Eu e minha turma Estamos aprendendo linguagem de programação em HTML e CSS. Esta é minha primeira página.</p>
-                <a href="colocar meu code no github aqui">  
+                <a href="https://github.com/Migssssssssssssss">  
                     <img src="img/github.svg" alt="Ícone do GitHub"  class="estudante-icone">
                 </a>
-                <a href="colocar meu insta aqui">
+                <a href="https://www.instagram.com/migs_edu/">
                     <img src="img/instagram.svg" alt="Ícone do Instagram" class="estudante-icone" >
                 </a>
                 <a href="whatsapp link quando eu puder">
@@ -53,7 +53,7 @@
             
         <footer class="rodape">
             <h2>Rodapé</h2>
-            <p> Desenvolvido por Miguel Eduardo de Almeida, ealsiliado por Gerson Cesar Grobe de Miranda. 
+            <p> Desenvolvido por Miguel Eduardo de Almeida, e auxiliado pelo professor Gerson Cesar Grobe de Miranda. 
                 
             </p>
         </footer>
