--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section id="estudante">
             <h2 class="estudante-titulo">Minha Apresentação</h2>
             <div class="estudante-div" >
-                <img src="img/minha foto.jpeg" alt="Foto de perfil do Miguel Eduardo de Alemida " class="estudante-imagem">
+                <img src="img/minha foto.jpg" alt="Foto de perfil do Miguel Eduardo de Alemida " class="estudante-imagem">
                 <h3 class="estudante-nome" > Sou Miguel Eduardo de Alemida </h3>
                 <h1> Estou aprendendo programação </h1>
                 <p>Sou estutandante do Ensino Médio.</p>
