--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="https://www.instagram.com/migs_edu/">
                     <img src="img/instagram.svg" alt="Ícone do Instagram" class="estudante-icone" >
                 </a>
-                <a href="whatsapp link quando eu puder">
+                <a href="https://wa.me/554199942598">
                     <img src="img/whatsapp.svg" alt="Ícone do Whatsapp" class="estudante-icone" >
                 </a>
             </div>
